bk_ida/gccida/g2/expr_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expr_size/src/explow.c:759:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expr_size/src/explow.c:769:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expr_size/src/explow.c:774:39: error: use of undeclared identifier 'machine_mode'
return expand_expr( size_unit, 0LL, ( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), EXPAND_NORMAL); 
                                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expr_size/src/obj/explow.o] Error 1
